update: refactor speciality in response
